// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deprecated 1`] = `
Object {
  "parser": "flow",
}
`;

exports[`deprecated 2`] = `
Array [
  "useFlowParser is deprecated, we now treat it as { parser: \\"flow\\" }.",
]
`;

exports[`redirect 1`] = `
Object {
  "parser": "css",
}
`;

exports[`redirect 2`] = `
Array [
  "{ parser: \\"postcss\\" } is deprecated, we now treat it as { parser: \\"css\\" }.",
]
`;
